--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(CMakeSFMLProject LANGUAGES CXX)
+project(SFML-pong LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
@@ -10,9 +10,31 @@ FetchContent_Declare(SFML
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(CMakeSFMLProject src/main.cpp)
-target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics)
-target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
+include_directories(inc)
+include_directories(src)
+
+set(SOURCE_FILE
+
+        src/Game.cpp
+        src/User.cpp
+        src/Ball.cpp
+)
+
+set(INCLUDE_FILE
+
+        inc/Game.hpp
+        inc/Ball.hpp
+        inc/User.hpp
+
+)
+
+add_executable(${PROJECT_NAME}
+        main.cpp
+        ${SOURCE_FILE}
+        ${INCLUDE_FILE}
+)
+target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
 if(WIN32)
     add_custom_command(
@@ -22,4 +44,4 @@ if(WIN32)
         VERBATIM)
 endif()
 
-install(TARGETS CMakeSFMLProject)
+install(TARGETS ${PROJECT_NAME})
