update the cmake to handle the new changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,9 @@ set(SOURCE_FILE
         src/Game.cpp
         src/User.cpp
         src/Ball.cpp
-        src/Obstacles.cpp
         src/Entity.cpp
         src/HUD.cpp
+        src/AssetManager.cpp
 
 )
 
@@ -29,9 +29,9 @@ set(INCLUDE_FILE
         inc/Game.hpp
         inc/Ball.hpp
         inc/User.hpp
-        inc/Obstacles.hpp
         inc/Entity.hpp
         inc/HUD.hpp
+        inc/AssetManager.hpp
 
 )
 
